# smolurls

./: Dockerfile  README.md  main.py  pyproject.toml
app/: __init__.py  application.py  config.py  db.py  mcp_server.py  models.py  schemas.py  services.py
app/api/: routes.py
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  mcp_server.py
backend/app/api/: routes.py
docs/: backend.md  frontend.md  mcp.md
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/[id]/: loading.tsx  page.tsx
frontend/app/analytics/[id]/_components/: analytics-view.tsx  clicks-chart.tsx  events-table.tsx
frontend/app/mcp/: page.tsx
frontend/app/mcp/_components/: mcp-page.tsx
frontend/app/urls/: loading.tsx  page.tsx
frontend/app/urls/_components/: url-list.tsx
frontend/components/: badge.tsx  copy-button.tsx  loading-skeleton.tsx  navbar.tsx  page-transition.tsx  section-reveal.tsx
frontend/components/ui/: tooltip.tsx
frontend/lib/: api.ts  mcp-docs.ts  types.ts
