[project]
name = "smolurls"
version = "0.1.0"
description = "URL shortener and analytics API with MCP endpoint"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.115.0",
	"fastmcp>=2.0.0",
	"pydantic>=2.9.0",
	"sqlalchemy>=2.0.36",
	"psycopg[binary]>=3.2.0",
	"uvicorn[standard]>=0.32.0",
]
